@@ -1436,6 +1436,7 @@ int    Pl_Query_Next_Solution(void)
 void   Pl_Query_End          (int op)
 PlTerm Pl_Get_Exception      (void)
 void   Pl_Exec_Continuation  (int functor, int arity, PlTerm *arg)
+void   Pl_Throw              (PlTerm ball)
 \end{verbatim}
 \end{Indentation}
 
@@ -1479,7 +1480,7 @@ obtain the unification performed by the query.
 
 \item \texttt{PL\_EXCEPTION} (a constant equal to 2). In that case function
 \texttt{Pl\_Get\_Exception()} can be used to obtained the exceptional term
-raised by \IdxPB{throw/1} \RefSP{catch/3}.
+raised by \IdxCC{throw/1} \RefSP{catch/3}.
 
 \end{itemize}
 
@@ -1517,11 +1518,17 @@ terminating it to call another query. In that case the first execution of
 \texttt{Pl\_Query\_End()} will finish the second query (i.e. the inner) and
 the next execution of \texttt{Pl\_Query\_End()} will finish the first query.
 
-Finally, the function \texttt{Pl\_Exec\_Continuation(functor, arity,
+The function \texttt{Pl\_Exec\_Continuation(functor, arity,
 arg)} replaces the current calculus by the execution of the specified
 predicate. The arguments \texttt{functor}, \texttt{arity} and
 \texttt{arg} are similar to those of the functions handling complex
 terms \RefSP{Introduction:(Manipulating-Prolog-terms)}.
+
+Finally the function \texttt{Pl\_Throw(ball)} throws an exception. See the
+\IdxCC{throw/1} control construct for more information on exceptions
+\RefSP{catch/3}. Note that \texttt{Pl\_Throw(ball)} is logically equivalent (but
+faster)
+to \texttt{Pl\_Exec\_Continuation(Pl\_Find\_Atom("throw"), 1, \&ball)} .
 
 \subsubsection{Example: \texttt{my\_call/1} - a \texttt{call/1} clone}
 
@@ -1612,7 +1619,8 @@ my_call(PlTerm goal)
   if (result == PL_EXCEPTION)
     {
       PlTerm except = Pl_Get_Exception();
-      Pl_Exec_Continuation(Find_Atom("throw"), 1, &except);
+      Pl_Throw(except); 
+      // equivalent to Pl_Exec_Continuation(Find_Atom("throw"), 1, &except);
     }
 
   return result;
