@@ -1,5 +1,7 @@
 Change in GNU Prolog version 1.4.3:
 
+* add PlULong to gprolog.h and PlThrow(ball) to foreign interface
+* improve the FD solver (avoid some cases of C stack overflow, improved fd_domain/3)
 * fix a bug in the FD solver
 
 Change in GNU Prolog version 1.4.2:
